# IS601-Module8-Assignment

./: ReadMe.md  docker-compose.yml  main.py  pyproject.toml
.github/: workflows.yaml
.github/workflows/: workflows.yaml
app/operations/: __init__.py
calculator_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: index.html
tests/e2e/: test_e2e.py
tests/integration/: test_integration_api.py
tests/unit/: test_operations_unit.py
