[project]
name = "is601_module08"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "pydantic",
    "pytest",
    "pytest-playwright",
    "requests",
    "playwright",
    "httpx"
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
